--- a/style.css
+++ b/style.css
@@ -4,15 +4,21 @@
     padding: 0;
 }
 .container{
-    background-color: black;
-    color: white;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    position: relative;
 }
-.background{
-    background-color: white;
-    color: black;
+.bg-photo{
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
 }
-.header{
-
+.overlay{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(10, 10, 10, 0.8);
+    
 }
-img{}
-a{}
