--- a/style.css
+++ b/style.css
@@ -33,3 +33,9 @@
     flex-direction: row;
     gap: 20px;
 }
+.links{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+}
