--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     box-sizing: border-box;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .container{
     width: 100%;
@@ -31,11 +32,22 @@
     border-radius: 20px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     gap: 20px;
 }
 .links{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 40px;
+    gap: 60px;
+}
+.links > a{
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+}
+.user{
+    display: flex;
+    align-items: center;
+    padding-right: 20px;
 }
