--- a/style.css
+++ b/style.css
@@ -81,3 +81,17 @@
     display: flex;
     flex-direction: row;
 }
+.left-content{
+    width: 50%;
+    padding: 20px;
+    
+}
+.left-content > h1, h3, p{
+    text-align: center;
+    color: white;
+    padding: 20px;
+}
+.right-content{
+    width: 50%;
+    padding: 20px;
+}
