--- a/style.css
+++ b/style.css
@@ -93,5 +93,9 @@
 }
 .right-content{
     width: 50%;
-    padding: 20px;
+    height: auto;
+    background-color: aliceblue;
+}
+.right-content img{
+    
 }
