--- a/style.css
+++ b/style.css
@@ -124,18 +124,34 @@
     color: white;
     padding: 10px;
     
-}
+}/* will redo this part*/
 .main-body{
     width: 100%;
     height: 100vh;
     margin: 0;
+    background-color: gray;
 }
-.element{
+.body-content{
+    width: 100%;
+    margin: 0;
+}
+.elements{
     width: 90%;
     padding: 20px;
     height: auto;
+    margin: 0 auto;
     overflow: hidden;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 20px;
+}
+.col-25{
+    width: 30%;
+    height: auto;
+    border-radius: 10px;
+    background-color: white;
+}
+.col-25 > p{
+    color: black;
 }
