--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@
     margin: 0;
 }
 .elements{
+    background-color: yellow;
     width: 90%;
     padding: 20px;
     height: auto;
@@ -144,14 +145,19 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
 }
 .col-25{
     width: 30%;
     height: auto;
+    overflow: hidden;
     border-radius: 10px;
     background-color: white;
 }
 .col-25 > p{
     color: black;
+}
+.col-25 >img{
+    width: 100%;
 }
