--- a/style.css
+++ b/style.css
@@ -173,10 +173,13 @@ input{
 }
 .col-25 > p{
     color: black;
+    text-align: left;
+    font-size: 18px;
 }
 .col-25 >img{
     width: 100%;
     height: 170px;
+    border-bottom: 1px solid black;
 }
 .col-25:last-child::after{
     content: "";
