--- a/style.css
+++ b/style.css
@@ -186,3 +186,9 @@ input{
     width: 30%;
     height: auto;
 }
+.col-25 span{
+    color: red;
+    font-style: italic;
+    font-size: 12px;
+    padding-left: 20px;
+}
