--- a/style.css
+++ b/style.css
@@ -115,8 +115,9 @@
     border-radius: 5px;
     margin: 0 auto;
 }
-.left-content > button{
-    box-shadow: 2px 4px rgba(29,29, 29, 0.4);
+.left-content > button a{
+    text-decoration: none;
+    color: white;
 }
   .fa-solid{
     display: none;
@@ -151,7 +152,6 @@ input{
     outline: none;
 }
 .elements{
-    background-color: yellow;
     overflow: hidden;
     width: 90%;
     padding: 20px;
@@ -179,13 +179,9 @@ input{
 .col-25 >img{
     width: 100%;
     height: 170px;
-    border-bottom: 1px solid black;
+   box-shadow: 4px 3px 4px 0;
 }
-.col-25:last-child::after{
-    content: "";
-    width: 30%;
-    height: auto;
-}
+
 .col-25 span{
     color: red;
     font-style: italic;
