--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@
     width: 100%;
     height: 100%;
     margin: 0;
-    background-color: gray;
+    background-color: rgb(226, 222, 222);
     
 }
 .header-content{
