--- a/style.css
+++ b/style.css
@@ -201,3 +201,20 @@ input{
     margin-bottom: 10px;
     margin-right: 10px;
 }
+
+.shopping-cart{
+   position: relative;
+}
+
+.shopping-cart .fa-solid{
+    color: black;
+}
+.shopping-cart .counter{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: red;
+    border-radius: 50px;
+    top: 2px;
+    right: 2px;
+    opacity: 0.8;
