--- a/style.css
+++ b/style.css
@@ -145,6 +145,12 @@
    text-decoration: none;
    color: black;
 }
+.header-a-content a:hover{
+    color: orangered;
+    transform: translate(2px, 2px);
+    transition: all 0.5s; 
+}
+
 .dark-bright .fa-solid{
     color: black;
     font-size: 23px;
