--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@
     height: 100%;
     margin: 0;
     background-color: rgb(226, 222, 222);
+    color: black;
     
 }
 .header-content{
@@ -246,4 +247,12 @@ input{
     height: 40px;
     border: none;
     border-radius: 50%;
+}
+.dark{
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    background-color: rgb(19, 18, 18);
+    color: rgb(250, 247, 247);
 }
