--- a/style2.css
+++ b/style2.css
@@ -2,12 +2,29 @@
     text-decoration: none;
     color: black;
 }
+.main-form p{
+    text-align: center;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 .form-content{
     width: 50%;
     margin: 20px auto;
-    border: 1px solid navy;
+    border: 3px solid navy;
+    border-radius: 6px;
 }
 input{
-    width: 100%;
+    display: block;
+    width: 50%;
     padding: 8px;
+    margin: 10px auto;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    background-color: rgb(189, 186, 186);
+}
+label{
+    margin-left: 150px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
 }
