--- a/style2.css
+++ b/style2.css
@@ -10,7 +10,8 @@
 .form-content{
     width: 50%;
     margin: 20px auto;
-    border: 3px solid navy;
+    background-color: antiquewhite;
+    border: 3px solid orange;
     border-radius: 6px;
 }
 input{
@@ -27,4 +28,19 @@ label{
     margin-left: 150px;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
+}
+.check{
+    width: 50%;
+    margin: 0 auto;
+    border: none;
+}
+.check input{
+    display: inline;
+    width: 20px;
+    margin: 0;
+}
+.check p {
+    font-size: unset;
+    text-align: unset;
+    display: inline;
 }
