--- a/style2.css
+++ b/style2.css
@@ -13,6 +13,7 @@
     background-color: antiquewhite;
     border: 3px solid orange;
     border-radius: 6px;
+    padding: 20px;
 }
 input{
     display: block;
@@ -22,17 +23,19 @@ input{
     border-radius: 4px;
     border: none;
     outline: none;
-    background-color: rgb(189, 186, 186);
+    background-color: rgb(241, 197, 146);
 }
 label{
     margin-left: 150px;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
 }
+fieldset{
+    border: none;
+}
 .check{
     width: 50%;
     margin: 0 auto;
-    border: none;
 }
 .check input{
     display: inline;
@@ -43,4 +46,16 @@ label{
     font-size: unset;
     text-align: unset;
     display: inline;
+}
+button{
+    display: block;
+    width: 140px;
+    padding: 6px;
+    background-color: rgb(255, 17, 0);
+    color: white;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    margin: 0 auto;
 }
