--- a/style.css
+++ b/style.css
@@ -264,3 +264,37 @@ input{
     height: 100%;
     margin: 0;
 }
+
+/* the login page */
+.login-modal{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: white;
+}
+.main-page{
+    width: 70%;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.login-page{
+    width: 40%;
+    padding: 10px;
+    background-color: antiquewhite;
+}
+.login-page input{
+    display: block;
+    padding: 6px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    margin: 10px;
+    background-color: orangered;
+}
+.login-page .inline-input > input, p {
+    display: inline;
+}
