--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@
     margin-left: auto;
     margin-top: 100px;
 }
-.left-content > button{
+.left-content > .lefty{
     display: block;
     width: 140px;
     background-color: rgb(255, 17, 0);
@@ -119,13 +119,13 @@
     text-decoration: none;
     color: white;
 }
-  .fa-solid{
+  .start-fa{
     display: none;
     font-size: 16px;
     color: white;
     padding: 10px;
     
-}/* will redo this part*/
+}/* Styling for the menu page*/
 .main-body{
     box-sizing: border-box;
     width: 100%;
@@ -162,7 +162,7 @@
     width: 100%;
     margin: 0;
 }
-.body-content .fa-solid{
+.body-content > .fa-solid{
     position: absolute;
     color: black;
     
@@ -263,38 +263,104 @@ input{
     width: 100%;
     height: 100%;
     margin: 0;
-}
+} */
 
 /* the login page */
+
 .login-modal{
     display: none;
     position: absolute;
-    width: 100%;
-    height: 100%;
     top: 0;
-    background-color: white;
-}
-.main-page{
-    width: 70%;
-    margin: 10px auto;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    background-color: rgba(8, 8, 8, 0.8);
+    
+ }
+ .modal{
+    width: 100%;
+    height: 100vh;
+    margin: 0;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    align-items: center;
+ }
+ .main-page{
+    position: relative;
+    width: 80%;
+    height: 50%;
+    margin:0 auto;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    
 }
 .login-page{
-    width: 40%;
+    width: 50%;
     padding: 10px;
     background-color: antiquewhite;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .login-page input{
     display: block;
+    width: 50%;
     padding: 6px;
     border: none;
     border-radius: 5px;
     outline: none;
     margin: 10px;
-    background-color: orangered;
+    background-color: rgb(238, 204, 140);
 }
-.login-page .inline-input > input, p {
+.login-page .inline-input > input, .p2 {
     display: inline;
+    width: 20px;
+}
+.login-page > .p1{
+    width: 100%;
+    display: block;
+    margin-left: 265px;
+    margin-top: 10px;
+    
+}
+.login-bg{
+    margin: 0;
+    width: 50%;
+    height: 100%;
+    background-image: url(photos/burger.jpeg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    
+}
+.b-log{
+    display: block;
+    width: 140px;
+    padding: 6px;
+    background-color: rgb(255, 17, 0);
+    color: white;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    margin: 0 auto;
+}
+.close{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+.close:hover{
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+}
+.animate{
+    animation: animatezoom 1s;
+}
+@keyframes animatezoom{
+    from{transform: scale(0);}
+    to{transform: scale(1);}
 }
