continuation with debuging my code

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@
     transition: all 0.5s; 
 }
 
-.dark-bright > .fa-solid{
+.dark-brights > .fa-solid{
     color: black;
     font-size: 23px;
     margin-right: 200px;
