--- a/style.css
+++ b/style.css
@@ -72,6 +72,11 @@
     color: white;
     font-size: 18px;
 }
+.user p > span:hover{
+    color: orange;
+    cursor: pointer;
+    transform: translate(-2px);
+}
 .user p > a:hover{
     color: orange;
     transform: translate(-2px);
@@ -276,7 +281,7 @@ input{
     width: 100%;
     height: 100vh;
     margin: 0;
-    background-color: rgba(168, 165, 165, 0.8);
+    background-color: rgba(71, 69, 69, 0.7);
     
  }
 
@@ -325,4 +330,58 @@ input{
 .login-page .inline-input > p {
     display: inline;
     width: 20px;
+}
+
+.login-page > p{
+    width: 100%;
+    display: block;
+    margin-left: 265px;
+    margin-top: 10px;
+    
+}
+.login-bg{
+    margin: 0;
+    width: 50%;
+    height: 100%;
+    background-image: url(photos/burger.jpeg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    
+}
+.button-bg{
+    display: block;
+    width: 140px;
+    padding: 6px;
+    background-color: rgb(255, 17, 0);
+    color: white;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    margin: 0 auto;
+}
+
+.fa-xmark{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+.fa-xmark:hover{
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+}
+.p1{
+    all: initial;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+
+}
+.animate{
+    animation: animatezoom 1s;
+}
+@keyframes animatezoom{
+    from{transform: scale(0);}
+    to{transform: scale(1);}
 }
