--- a/style2.css
+++ b/style2.css
@@ -9,7 +9,13 @@ body{
     height: 50px;
     border-radius: 50%;
     position: sticky;
-    top: 0;
+    background-color: rgb(255, 17, 0);
+    color: white;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    top: 0px;
+    left: 50px;
 }
 .main-form p{
     text-align: center;
@@ -59,7 +65,7 @@ fieldset{
     display: inline;
     color: black;
 }
-button{
+.but1{
     display: block;
     width: 140px;
     padding: 6px;
