--- a/style.css
+++ b/style.css
@@ -256,6 +256,10 @@ input{
     border: none;
     border-radius: 50%;
 }
+.inside-button:hover{
+    color: black;
+    opacity: 0.7;
+}
 .dark{
     box-sizing: border-box;
     width: 100%;
