--- a/style2.css
+++ b/style2.css
@@ -83,3 +83,10 @@ fieldset{
     border-radius: 5px;
     margin: 0 auto;
 }
+.body-container{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
