--- a/style2.css
+++ b/style2.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-body .main-form{
+body{
     background-image: url(photos/background.jpeg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -16,13 +16,14 @@ body .main-form{
     height: 50px;
     border-radius: 50%;
     position: sticky;
+    top: 0;
+    margin-top: 10px;
+    left: 50px;
     background-color: rgb(255, 17, 0);
     color: white;
     font-size: 16px;
     border: none;
     outline: none;
-    top: 0px;
-    left: 50px;
 }
 .main-form p{
     text-align: center;
