--- a/style.css
+++ b/style.css
@@ -402,3 +402,8 @@ input{
 .cart-main-side{
     width: 70%;
 }
+.cart-headings{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
