--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@
      width: 15px;
      height: 15px;
      background-color: red;
+     color: white;
      border-radius: 50px;
      top: -5px;
      right: 20px;
