--- a/style.css
+++ b/style.css
@@ -179,10 +179,11 @@
      height: 15px;
      background-color: red;
      color: white;
+     text-align: center;
      border-radius: 50px;
      top: -5px;
      right: 20px;
-     opacity: 0.8;
+     opacity: 0.9;
  }
 .body-content{
     position: relative;
